@@ -1,3 +1,10 @@
+2001-05-25  Christian Stimming  <stimming@tuhh.de>
+
+	* src/gnome/gnc-html-guppi.c (gnc_has_guppi_version): generalized
+	this function for arbitrary Guppi versions. Tried to enable
+	barchart axis-labels for CVS Guppi but this gives nothing but
+	segfaults. Shit.
+
 2001-05-25  Dave Peticolas  <dave@krondo.com>
 
 	* src/scm/report/account-summary.scm: fix bug
